package com.finalProject.checkify.entity;

public enum Role {
    USER,
    ADMIN
}
