@startuml

title __SPRING-BOOT-CHECKIFY's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      class com.finalProject.checkify.SpringBootCheckifyApplication {
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace controller {
        class com.finalProject.checkify.controller.AdminController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace controller {
        class com.finalProject.checkify.controller.CategoryController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace controller {
        class com.finalProject.checkify.controller.FridgeController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace controller {
        class com.finalProject.checkify.controller.ProductController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace controller {
        class com.finalProject.checkify.controller.ProductListController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace controller {
        class com.finalProject.checkify.controller.UserController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace dao {
        interface com.finalProject.checkify.dao.CategoryRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace dao {
        interface com.finalProject.checkify.dao.FridgeRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace dao {
        interface com.finalProject.checkify.dao.ProductListRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace dao {
        interface com.finalProject.checkify.dao.ProductRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace dao {
        interface com.finalProject.checkify.dao.UserRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace entity {
        class com.finalProject.checkify.entity.Category {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace entity {
        class com.finalProject.checkify.entity.Fridge {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace entity {
        class com.finalProject.checkify.entity.Product {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace entity {
        class com.finalProject.checkify.entity.ProductList {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace entity {
        enum Role {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace entity {
        class com.finalProject.checkify.entity.User {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace jackson {
        class com.finalProject.checkify.jackson.ProductListDeserialization {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace security {
        class com.finalProject.checkify.security.JwtAuthorizationFilter {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace security {
        class com.finalProject.checkify.security.JwtTokenProvider {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace security {
        class com.finalProject.checkify.security.WebSecurityConfig {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        interface com.finalProject.checkify.service.CategoryService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        class com.finalProject.checkify.service.CategoryServiceImpl {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        interface com.finalProject.checkify.service.FridgeService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        class com.finalProject.checkify.service.FridgeServiceImpl {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        interface com.finalProject.checkify.service.ProductListService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        class com.finalProject.checkify.service.ProductListServiceImpl {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        interface com.finalProject.checkify.service.ProductService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        class com.finalProject.checkify.service.ProductServiceImpl {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        class com.finalProject.checkify.service.UserDetailsServiceImpl {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        interface com.finalProject.checkify.service.UserService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.finalProject.checkify {
      namespace service {
        class com.finalProject.checkify.service.UserServiceImpl {
        }
      }
    }
  }
  

  com.finalProject.checkify.controller.AdminController o-- com.finalProject.checkify.service.UserService : userService
  com.finalProject.checkify.controller.CategoryController o-- com.finalProject.checkify.service.CategoryServiceImpl : categoryService
  com.finalProject.checkify.controller.FridgeController o-- com.finalProject.checkify.service.FridgeServiceImpl : fridgeService
  com.finalProject.checkify.controller.ProductController o-- com.finalProject.checkify.service.ProductServiceImpl : productService
  com.finalProject.checkify.controller.ProductListController o-- com.finalProject.checkify.service.ProductListServiceImpl : productListService
  com.finalProject.checkify.controller.UserController o-- com.finalProject.checkify.security.JwtTokenProvider : jwtTokenProvider
  com.finalProject.checkify.controller.UserController o-- com.finalProject.checkify.service.UserService : userService
  com.finalProject.checkify.entity.ProductList o-- com.finalProject.checkify.entity.Category : category
  com.finalProject.checkify.entity.ProductList o-- com.finalProject.checkify.entity.Fridge : fridge
  com.finalProject.checkify.entity.User .up.|> java.io.Serializable
  com.finalProject.checkify.entity.User o-- com.finalProject.checkify.entity.Role : role
  com.finalProject.checkify.jackson.ProductListDeserialization -up-|> com.fasterxml.jackson.databind.deser.std.StdDeserializer
  com.finalProject.checkify.security.JwtAuthorizationFilter -up-|> org.springframework.security.web.authentication.www.BasicAuthenticationFilter
  com.finalProject.checkify.security.JwtAuthorizationFilter o-- com.finalProject.checkify.security.JwtTokenProvider : jwtTokenProvider
  com.finalProject.checkify.security.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.finalProject.checkify.security.WebSecurityConfig o-- com.finalProject.checkify.security.JwtTokenProvider : tokenProvider
  com.finalProject.checkify.service.CategoryServiceImpl .up.|> com.finalProject.checkify.service.CategoryService
  com.finalProject.checkify.service.CategoryServiceImpl o-- com.finalProject.checkify.dao.CategoryRepository : categoryRepository
  com.finalProject.checkify.service.FridgeServiceImpl .up.|> com.finalProject.checkify.service.FridgeService
  com.finalProject.checkify.service.FridgeServiceImpl o-- com.finalProject.checkify.dao.FridgeRepository : fridgeRepository
  com.finalProject.checkify.service.ProductListServiceImpl .up.|> com.finalProject.checkify.service.ProductListService
  com.finalProject.checkify.service.ProductListServiceImpl o-- com.finalProject.checkify.dao.ProductListRepository : productListRepository
  com.finalProject.checkify.service.ProductServiceImpl .up.|> com.finalProject.checkify.service.ProductService
  com.finalProject.checkify.service.ProductServiceImpl o-- com.finalProject.checkify.dao.ProductRepository : productRepository
  com.finalProject.checkify.service.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.finalProject.checkify.service.UserDetailsServiceImpl o-- com.finalProject.checkify.dao.UserRepository : userRepository
  com.finalProject.checkify.service.UserServiceImpl .up.|> com.finalProject.checkify.service.UserService
  com.finalProject.checkify.service.UserServiceImpl o-- com.finalProject.checkify.dao.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
